ensure toggle label doesn't split to 2 lines on smaller screens

--- a/client/gutenberg/extensions/business-hours/editor.scss
+++ b/client/gutenberg/extensions/business-hours/editor.scss
@@ -46,9 +46,6 @@
 
 			.business-hours__day {
 				width: 100%;
-				.business-hours__day-name {
-					width: 20%;
-				}
 			}
 
 			.business-hours__hours {
